# minecraft-font-ocr

./: .gitignore  PLANNING.md  README.md  pyproject.toml
minecraft_ocr/: __init__.py  atlas.py  pipeline.py  renderer.py
tests/: test_atlas.py  test_integration.py  test_pipeline.py  test_renderer.py
